# atlas

./: .gitignore  AGENTS.md  API_SPEC.md  ARCHITECTURE.md  ATLAS_BINARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPILER.md  CONTRIBUTING.md  Cargo.toml  DATA_SCHEMA.md  DECISION_ENGINE.md  ENGINEERING_IR.md  GRAPH_MODEL.md  LICENSE  PACKAGE_MANAGER.md  README.md  ROADMAP.md  RUNTIME.md  SECURITY.md  SYSTEM_DESIGN.md  WHITEPAPER.md  check_fm.py  check_yaml.py  dump.json  inspect_binary.py  verify_packages.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/atlas-compile/: action.yml
.github/actions/atlas-verify/: action.yml
.github/workflows/: ci.yml  publish-crates.yml  publish-pypi.yml  release.yml
atlas-cli/: Cargo.toml
atlas-cli/src/: main.rs  templates.rs
atlas-compiler/: Cargo.toml
atlas-compiler/src/: lib.rs
atlas-compiler/src/binary/: mod.rs
atlas-compiler/src/frontends/: decision.rs  mod.rs
atlas-compiler/tests/: compiler_test.rs  integration_test.rs
atlas-ir/: Cargo.toml
atlas-ir/src/: embedding.rs  lib.rs
atlas-ir/tests/: embedding_test.rs
atlas-runtime/: Cargo.toml
atlas-runtime/src/: compliance.rs  decision.rs  lib.rs  loader.rs  reasoner.rs  verify.rs
atlas-runtime/tests/: runtime_test.rs
benchmarks/: README.md  results.json  run_benchmarks.py  smolagents_comparison.py  smolagents_results.json
docs/: benchmarks-vs-smolagents.md
mcp-server/: package-lock.json  package.json  tsconfig.json
mcp-server/src/: atlas.ts  index.ts
mcp-server/tests/: atlas.test.ts  index.test.ts
python/: README.md  pyproject.toml
python/atlas_sdk/: __init__.py  client.py  models.py  registry.py
python/atlas_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/examples/: qa_agent.py  tech_stack.tree.yaml
python/tests/: test_agents_e2e.py  test_client.py  test_integration.py  test_models.py
qa/: evilpkg.md
qa-reports/: qa-report-20260713_181057.json
qa/cli/: $null  A01_solve_noarg.se  A02_decide_noarg.se  A03_reason_noarg.se  A05_init_noarg.se  A06_publish_noarg.se  A08_unknown_flag.se  A10_dir_as_file.se  A12_emptyquery.se  A13_query_inject.se  B01_solve_nobundle.se  B02_solve_corrupt.se  B03_decide_empty.se  B04_decide_badctx1.se  B08_reason_corrupt.se  C01_verify_corrupt.se  C04_verify_empty_policy.se  D02_init_slash.se  E01_install_unsupported.se  E02_search_empty.se  E05_publish_nopath.se  E06_publish_md.se  F01_multi.se  F03_dupsrc.se  F06_relpath.se  FINDINGS.md  H01_panic_bt.se  M01_empty.err  M02_nofront.err  M03_brokenfm.err  M04_dup.err  M05_utf.err  M06_huge.err  M07_nested.err  M08_onlyfm.out  M09_badedge.out  M10_garb.err  Z03_verify_zero.se  Z04_reason_model.se  Z06_dump_corrupt.se  (+28 more)
qa/cli/atlas/: atlas.md
qa/cli/atlas/decisions/: atlas.yaml
qa/cli/jsonpkg/: jsonpkg.md
qa/cli/jsonpkg/decisions/: jsonpkg.yaml
qa/cli/my project/: my project.md
qa/cli/my project/decisions/: my project.yaml
qa/cli/p_flutter/: p_flutter.md
qa/cli/p_flutter/decisions/: p_flutter.yaml
qa/cli/p_py/: p_py.md
qa/cli/p_py/decisions/: p_py.yaml
qa/cli/p_rust/: p_rust.md
qa/cli/p_rust/decisions/: p_rust.yaml
qa/cli/p_ts/: p_ts.md
qa/cli/p_ts/decisions/: p_ts.yaml
qa/cli/p_ts7/: p_ts7.md
qa/cli/p_ts7/decisions/: p_ts7.yaml
qa/cli/p_unk/: p_unk.md
qa/cli/p_unk/decisions/: p_unk.yaml
qa/cli/unktmpl/: unktmpl.md
qa/cli/unktmpl/decisions/: unktmpl.yaml
qa/cli/Ð¿Ð°ÐºÐµÑ‚_Ñ‚ÐµÑÑ‚/: .gitignore  Ð¿Ð°ÐºÐµÑ‚_Ñ‚ÐµÑÑ‚.md
qa/cli/Ð¿Ð°ÐºÐµÑ‚_Ñ‚ÐµÑÑ‚/decisions/: Ð¿Ð°ÐºÐµÑ‚_Ñ‚ÐµÑÑ‚.yaml
qa/enterprise/: FINDINGS.md
qa/enterprise/tmp/: fail.md
qa/knowledge/: FINDINGS.md
qa/out_evil/: x.md
qa/out_evil/decisions/: x.yaml
qa/registry/: FINDINGS.md  qa_additional.test.ts
qa/sdk/: FINDINGS.md  ascii_pkg.md  probe_mcp.mjs  probe_sdk.py  probe_sdk2.py  unicode_pkg.md
registry/: acme.json  globex.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
registry-backup/: package-lock.json  package.json  tsconfig.json  wrangler.jsonc
registry-backup/src/: index.ts
registry/scripts/: setup-keys.js
registry/src/: index.ts  registry.ts
registry/src/__tests__/: index.test.ts  qa_additional.test.ts  qa_probe.test.ts  qa_registry_security.test.ts  qa_verify2.test.ts  registry-enterprise.test.ts  registry.test.ts
registry/test/: cloudflare-workers-mock.ts
scripts/: README.md  ci.py  compile-all.py  publish-all.py  quality-score.py  validate-all.py
status/: index.html
studio/: next.config.ts  package-lock.json  package.json
studio/app/: globals.css  layout.tsx  page.tsx
studio/app/api/load/: route.ts
studio/app/api/load-registry/: route.ts
studio/app/components/: GraphView.tsx
studio/app/lib/: api.ts  cli.ts
vscode-atlas/: .vscodeignore  package-lock.json  package.json  tsconfig.json
vscode-atlas/src/: cliArgs.ts  extension.ts
vscode-atlas/src/test/: cliArgs.test.ts
website/: index.html
website/css/: style.css
website/docs/: api.html  index.html  quickstart.html
website/js/: search.js
website/studio/: index.html
