[workspace]
resolver = "2"
members = [
    "atlas-ir",
    "atlas-compiler",
    "atlas-runtime",
    "atlas-cli",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Atlas — the Knowledge Operating System for AI agents"

[workspace.dependencies]
atlas-ir = { path = "atlas-ir" }
atlas-compiler = { path = "atlas-compiler" }
atlas-runtime = { path = "atlas-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
pulldown-cmark = "0.12"
blake3 = "1"
zstd = "0.13"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
dirs = "6"
instant-distance = "0.7"
log = "0.4"
env_logger = "0.11"
