[package]
name = "atlas-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Atlas CLI — compile, solve, decide, verify, and publish knowledge packages for AI agents"

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
atlas-ir.workspace = true
atlas-compiler.workspace = true
atlas-knowledge.workspace = true
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
dirs.workspace = true
ureq = { version = "3", features = ["json"] }
env_logger.workspace = true

[features]
default = ["ollama"]
ollama = ["atlas-knowledge/ollama"]
