[package]
name = "atlas-compiler"
version.workspace = true
edition.workspace = true

[dependencies]
atlas-ir.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
pulldown-cmark.workspace = true
blake3.workspace = true
zstd.workspace = true
anyhow.workspace = true
chrono.workspace = true
