[package]
name = "atlas-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime for Atlas knowledge — memory-mapped loader, decision engine, verification, and reasoner"

[dependencies]
atlas-ir.workspace = true
atlas-compiler.workspace = true
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
zstd.workspace = true
anyhow.workspace = true
log.workspace = true

[features]
default = ["ollama"]
ollama = ["dep:ureq"]

[dependencies.ureq]
version = "3"
optional = true
default-features = false
features = ["json"]
