[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-sdk"
version = "0.1.0"
description = "Python SDK for Atlas Knowledge Operating System"
license = { "text" = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
